manifests/services/nextcloud/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: "main"
    # 200 Megabytes
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    # Ensure client IPs from Cloudflare are preserved
    nginx.ingress.kubernetes.io/configuration-snippet: "real_ip_header CF-Connecting-IP;"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.rgst.io
      secretName: files-rgst-io
  rules:
    - host: files.rgst.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nextcloud
                port:
                  name: http
